# CPU-Renderer

./: .gitignore  Model_example.h  README.md
Step1/: Matrix_example.h  Vector3_example.h  Vector4_example.cpp  Vector4_example.h  readme.md
Step1/abandon/: Vector_3.h
Step10/: Step10.1.cpp
Step12/: readme.md
Step2/: main.c  readme.md
Step2/ExampleProject/: readme.md  readme.txt
Step3/: SetPixel_example.cpp
Step4/: Step4_example.cpp  issues.md  readme.md
Step5/: Model_example.h  readme.md
Step5/ExampleScript/: Matrix_example_update.h  Model_example.h  NDC_example.h  Viewport_example.h  main.cpp  readme.md
Step6/: Model_example.h  main_example.cpp
Step7/: GetInputChar_Example.cpp  LookAtMatrix.h
Step8/: main.c
Step9/: Scanline.h  Trapezoid.h  Triangle.h  Vector4_example.h  Vertex.h
Step_10/: Step10.1.cpp
Step_11/: readme.md  伪代码描述.md
TinyRenderer_tutorial/: README.md
TinyRenderer_tutorial/Step1/: Vector3_example.cpp  readme.md
TinyRenderer_tutorial/Step3/: main_exapmle.c
TinyRenderer_tutorial/Step6/: main.cpp
TinyRenderer_tutorial/Step9/: Color.h  Line.h  Vector4_example.cpp
TinyRenderer_tutorial/importTGA/: readme.md
importObject/: readme.md
importTGA/: readme.md
opengl_triangle_demo/: README.md
opengl_triangle_demo/docs/: tutorial_1.md
opengl_triangle_demo/triangle_demo/: CMakeLists.txt
opengl_triangle_demo/triangle_demo/include/glad/: gl.h
opengl_triangle_demo/triangle_demo/shaders/: triangle.frag  triangle.vert
opengl_triangle_demo/triangle_demo/src/: main.cpp
useTGA/: readme.md
导入对象/: readme.md
(+24 files in other folders)
